--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "categories": [
       "Snippets"
     ],
-    "publisher": "eliazbobadilladev",
+    "publisher": "eliazbobadilla",
     "keywords": [
       "snippets",
       "python",
