--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Python UltiSnippets",
     "description": "A set of Python snippets for VSCode",
     "icon": "img/icon.png",
-    "version": "2.0.0",
+    "version": "2.0.2",
     "engines": {
       "vscode": "^1.35.0"
     },
@@ -22,7 +22,9 @@
     "keywords": [
       "snippets",
       "python",
-      "python3"
+      "python3",
+      "autocompletion",
+      "completion"
     ],
     "license": "MIT",
     "contributes": {
